--- a/resources/2103.md
+++ b/resources/2103.md
@@ -8,10 +8,10 @@ Robert Muller — Boston College
 
 Functional programming is a style of programming that is often considered an extension of algebra. The programmer tells the computer what to do by presenting an expression, the computer simplifies the expression to a value, if it has one, and the simplification process is identified as the computation process. Functional programming has deep roots in mathematical logic, especially in the [Lambda Calculus](https://en.wikipedia.org/wiki/Lambda_calculus) which was discovered in the early 1930s by the American Logician, [Alonzo Church](https://en.wikipedia.org/wiki/Alonzo_Church). Church developed the λ-calculus as a mathematical model of computation. A student working under his supervision at the time [Alan Turing](https://en.wikipedia.org/wiki/Alan_Turing) developed a very different model of computation, now known as a [Turing Machine](https://en.wikipedia.org/wiki/Turing_machine). The two models were shown to be equivalent --- for any function computable with a λ-term M, there was a Turing Machine computing the same function. And vice versa: for any function computable by a Turing Machine, there is an equivalent λ-term. In the process of proving this equivalence, Alan Turing became one of the first functional programmers. Computers as we know them wouldn't be invented for another decade.
 
-The idea of using λ-calculus as a basis for programming stored-program computers didn't really flourish until 1958 when [John McCarthy](https://en.wikipedia.org/wiki/John_McCarthy_(computer_scientist)) introduced the [LISP](https://en.wikipedia.org/wiki/Lisp_(programming_language)) programming language. This language was designed for applications in artificial intelligence. It was very loosely based on λ-calculus but many of the main ideas were there. Another milestone was the invention of [ISWIM](https://en.wikipedia.org/wiki/ISWIM#:~:text=ISWIM%20is%20an%20imperative%20programming,mechanism%3A%20the%20program%20point%20operator.) in 1965 by [Peter Landin](https://en.wikipedia.org/wiki/Peter_Landin). ISWIM lead a rich tree of variations, not least being [Robin Milner](https://en.wikipedia.org/wiki/Robin_Milner)'s beautiful [ML programming language](https://en.wikipedia.org/wiki/ML_(programming_language)). OCaml is a dialect of ML. 
+The idea of using λ-calculus as a basis for programming stored-program computers didn't really flourish until 1958 when [John McCarthy](https://en.wikipedia.org/wiki/John_McCarthy_(computer_scientist)) introduced the [LISP](https://en.wikipedia.org/wiki/Lisp_(programming_language)) programming language. This language was designed for applications in artificial intelligence. It was very loosely based on λ-calculus but many of the main ideas were there. Another milestone was the invention of [ISWIM](https://en.wikipedia.org/wiki/ISWIM#:~:text=ISWIM%20is%20an%20imperative%20programming,mechanism%3A%20the%20program%20point%20operator.) in 1965 by [Peter Landin](https://en.wikipedia.org/wiki/Peter_Landin). ISWIM lead a rich tree of variations, not least being [Robin Milner](https://en.wikipedia.org/wiki/Robin_Milner)'s beautiful [ML programming language](https://en.wikipedia.org/wiki/ML_(programming_language)). OCaml is a state-of-the-art dialect of ML. 
 
 In learning how to code in OCaml, you'll be learning how to code in the functional style. More specifically, you'll be learning how to code in a *functional first* style --- a style that recognizes the need for imperative features.
-In this course we'll discuss the basic differences between ML and other modern functional programming languages such as [Racket](https://en.wikipedia.org/wiki/Racket_(programming_language)), [Haskell](https://en.wikipedia.org/wiki/Haskell) and [Agda](https://en.wikipedia.org/wiki/Agda_(programming_language)) but we'll primarily be developing competency in coding in ML.
+In this course we'll discuss the basic differences between ML and other modern functional programming languages such as [Scheme/Racket](https://en.wikipedia.org/wiki/Racket_(programming_language)), [Haskell](https://en.wikipedia.org/wiki/Haskell) and [Agda](https://en.wikipedia.org/wiki/Agda_(programming_language)) but we'll primarily be developing competency in coding in ML. You might recognize features of ML from your favorite programming language: Java, Python, JavaScript, Swift, Go, etc. These were generally adopted in your favorite PL *post facto** -- long after the initial PL design. You'll find these features in their pure form in ML which is designed and built with a commitment to parsimony, orthogonality and solid mathematical foundations.
 
 All students enrolled in CSCI 2103 Functional Programming are expected to master the course material mastered by the students enrolled in the companion course CSCI 1103 Computer Science 1 Honors. In addition, problem sets for 2103 students will usually be more involved than the corresponding problem sets for 1103 students. Finally, students enrolled in 2103 are expected to choose one of 3 areas:
 
