--- a/resources/2103.md
+++ b/resources/2103.md
@@ -16,7 +16,7 @@ In this course we'll discuss the basic differences between ML and other modern f
 All students enrolled in CSCI 2103 Functional Programming are expected to master the course material mastered by the students enrolled in the companion course CSCI 1103 Computer Science 1 Honors. In addition, problem sets for 2103 students will usually be more involved than the corresponding problem sets for 1103 students. Finally, students enrolled in 2103 are expected to choose one of 3 areas:
 
 1. **Basic FP Track** --- complete the work of CSCI 1103 plus the additional 2103 problems
-2. **Theory  Track** --- learn about the λ-calculus and various typed λ-calculi; this track would involve implementing the [unification algorithm](https://en.wikipedia.org/wiki/Unification_(computer_science)) and [Wand's Simple Type Inference algorithm](./wand87.pdf);
+2. **Theory  Track** --- learn about the λ-calculus and various typed λ-calculi; this track would involve implementing the [unification algorithm](https://en.wikipedia.org/wiki/Unification_(computer_science)) and [Wand's Simple Type Inference algorithm](http://web.cs.ucla.edu/~palsberg/course/cs239/reading/wand87.pdf);
 3. **Advanced Data Structures Track** -- implement one or more high-performance data structures such as
    1. [Prefix Trees (aka tries)](https://en.wikipedia.org/wiki/Trie)
    2. [Radix Trees](https://en.wikipedia.org/wiki/Radix_tree)
