--- a/resources/2103.md
+++ b/resources/2103.md
@@ -13,7 +13,7 @@ The idea of using λ-calculus as a basis for programming stored-program computer
 In learning how to code in OCaml, you'll be learning how to code in the functional style. More specifically, you'll be learning how to code in a *functional first* style --- a style that recognizes the need for imperative features.
 In this course we'll discuss the basic differences between ML and other modern functional programming languages such as [Scheme/Racket](https://en.wikipedia.org/wiki/Racket_(programming_language)), [Haskell](https://en.wikipedia.org/wiki/Haskell) and [Agda](https://en.wikipedia.org/wiki/Agda_(programming_language)) but we'll primarily be developing competency in coding in ML. You might recognize features of ML from your favorite programming language: Java, Python, JavaScript, Swift, Go, etc. These were generally adopted in your favorite PL *post facto* -- long after the initial PL design. You'll find these features in their pure form in ML which is designed and built with a commitment to parsimony, orthogonality and solid mathematical foundations.
 
-All students enrolled in CSCI 2103 Functional Programming are expected to master the course material mastered by the students enrolled in the companion course CSCI 1103 Computer Science 1 Honors. In addition, problem sets for 2103 students will usually be more involved than the corresponding problem sets for 1103 students. Finally, students enrolled in 2103 are expected to choose one of 3 areas:
+All students enrolled in CSCI 2103 Functional Programming are expected to master the course material mastered by the students enrolled in the companion course CSCI 1103 Computer Science 1 Honors. In addition, problem sets for 2103 students will usually be more involved than the corresponding problem sets for 1103 students. Finally, students enrolled in 2103 are expected to choose one of 4 areas or tracks:
 
 1. **Basic FP Track** -- complete the work of CSCI 1103 plus the additional 2103 problems
 2. **Theory  Track** -- learn about the λ-calculus and various typed λ-calculi; this track would involve implementing the [unification algorithm](https://en.wikipedia.org/wiki/Unification_(computer_science)) and [Wand's Simple Type Inference algorithm](http://web.cs.ucla.edu/~palsberg/course/cs239/reading/wand87.pdf);
