--- a/resources/2103.md
+++ b/resources/2103.md
@@ -27,5 +27,5 @@ All students enrolled in CSCI 2103 Functional Programming are expected to master
 
 Students enrolled in CSCI 2103 are required to declare a track choice by
 midnight Monday September 12. A track declaration is made by emailing all
-of the course staff with the exact subject line: **CSCI 2103: Track" and
+of the course staff with the exact subject line: **CSCI 2103: Track** and
 with the choice indicated in the body of the email.
